fix(accordion): horizontally misaligned text in header

--- a/projects/angular/src/accordion/_accordion.clarity.scss
+++ b/projects/angular/src/accordion/_accordion.clarity.scss
@@ -80,7 +80,9 @@
     flex: 1 1 0;
     width: 100%;
     border: 0;
-    padding: tokens.$cds-global-space-8;
+    padding-left: tokens.$cds-global-space-7;
+    align-items: center;
+    min-height: mixins.baselinePx(56);
     background: transparent;
     text-align: left;
     cursor: pointer;
@@ -102,6 +104,7 @@
 
   .clr-accordion-status {
     width: tokens.$cds-global-space-11;
+    padding: tokens.$cds-global-space-4 0;
     display: inline-block;
     vertical-align: top;
   }
@@ -112,6 +115,7 @@
 
   .clr-accordion-header-has-description {
     .clr-accordion-title {
+      padding: tokens.$cds-global-space-4 0;
       min-width: accordion-variables.$clr-accordion-step-title-min-width;
       max-width: mixins.baselinePx(264);
       @media (min-width: accordion-variables.$clr-accordion-responsive-breakpoint) {
@@ -122,6 +126,7 @@
 
   .clr-accordion-description {
     display: inline-block;
+    padding: tokens.$cds-global-space-4 0;
     max-width: mixins.baselinePx(650);
 
     @media (min-width: accordion-variables.$clr-accordion-responsive-breakpoint) {
