--- a/projects/angular/src/accordion/stepper/_stepper.clarity.scss
+++ b/projects/angular/src/accordion/stepper/_stepper.clarity.scss
@@ -23,7 +23,6 @@
 
     .clr-accordion-status {
       min-width: tokens.$cds-global-space-14;
-      margin-left: tokens.$cds-global-space-7;
     }
 
     .clr-accordion-number {
